# Simple-Scene-Editor

./: CMakeLists.txt  README.md
common/: callbacks.h  idle_callback.cpp  init.h  keyboard_callback.cpp  state.cpp
include/: callbacks.h  camera.h  light.h  menus.h  model.h  mouse.h  scene_object.h  shader_init.h  state.h  texture.h
include/math3d/: fwdtypes.h  mat.h  mat2.cpp  mat3.cpp  mat4.cpp  vec.h  vec2.cpp  vec3.cpp  vec4.cpp
include/util/: bitmap.h  gnatidread.h  shaders.h
src/: main.cpp
src/common/: bitmap.cpp  gnatidread.cpp  idle_callback.cpp  init.cpp  keyboard_callback.cpp  model.cpp  render_scene.cpp  resize.cpp  scene_object.cpp  shader_init.cpp  state.cpp  texture.cpp
src/common/callbacks/: idle_callback.cpp  keyboard_callback.cpp  menu.cpp  menus.cpp  mouse_callback.cpp  object_menu.cpp  render_scene.cpp  timer.cpp
src/math3d/: mat2.cpp  mat3.cpp  mat4.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/shaders/: frag.glsl  vert.glsl  vertAnimated.glsl
src/util/: shader_init.cpp  shaders.cpp
